[gd_scene load_steps=73 format=3 uid="uid://b3nmpx846d5ao"]

[ext_resource type="Script" uid="uid://cjlt4vawe6ldt" path="res://Mobs/mushroom.gd" id="1_selrt"]
[ext_resource type="Texture2D" uid="uid://bkwwuid613pb0" path="res://art/oak_woods_v1.0/character/Forest_Monsters_FREE/Mushroom/Mushroom with VFX/Mushroom-Attack.png" id="1_sjuu0"]
[ext_resource type="Texture2D" uid="uid://b4ga1houiwkk5" path="res://art/oak_woods_v1.0/character/Forest_Monsters_FREE/Mushroom/Mushroom with VFX/Mushroom-Hit.png" id="2_selrt"]
[ext_resource type="Texture2D" uid="uid://cd355byl4uvml" path="res://art/oak_woods_v1.0/character/Forest_Monsters_FREE/Mushroom/Mushroom with VFX/Mushroom-Die.png" id="3_ufykn"]
[ext_resource type="Texture2D" uid="uid://yn6jrq4a78jt" path="res://art/oak_woods_v1.0/character/Forest_Monsters_FREE/Mushroom/Mushroom with VFX/Mushroom-Idle.png" id="4_xshu0"]
[ext_resource type="Texture2D" uid="uid://q4rm4u3dduio" path="res://art/oak_woods_v1.0/character/Forest_Monsters_FREE/Mushroom/Mushroom with VFX/Mushroom-Run.png" id="5_3ua80"]
[ext_resource type="Texture2D" uid="uid://cbqj55u5b1osl" path="res://art/oak_woods_v1.0/character/Forest_Monsters_FREE/Mushroom/Mushroom without VFX/Mushroom-Idle.png" id="6_xshu0"]
[ext_resource type="PackedScene" uid="uid://tbowfqgrey7s" path="res://DamageBox/damage_box.tscn" id="7_ufykn"]
[ext_resource type="PackedScene" uid="uid://cv53o6gojaist" path="res://mob_health.tscn" id="9_3ua80"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_768lt"]
radius = 4.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_18fl2"]
atlas = ExtResource("1_sjuu0")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pmuh"]
atlas = ExtResource("1_sjuu0")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qisqa"]
atlas = ExtResource("1_sjuu0")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2aqh"]
atlas = ExtResource("1_sjuu0")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwrmq"]
atlas = ExtResource("1_sjuu0")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n63ap"]
atlas = ExtResource("1_sjuu0")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdset"]
atlas = ExtResource("1_sjuu0")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4do7c"]
atlas = ExtResource("1_sjuu0")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd7ou"]
atlas = ExtResource("1_sjuu0")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_boqqp"]
atlas = ExtResource("1_sjuu0")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_042yf"]
atlas = ExtResource("2_selrt")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaqq0"]
atlas = ExtResource("2_selrt")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3cwd"]
atlas = ExtResource("2_selrt")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s16me"]
atlas = ExtResource("2_selrt")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_scx5s"]
atlas = ExtResource("2_selrt")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvb25"]
atlas = ExtResource("3_ufykn")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21rlh"]
atlas = ExtResource("3_ufykn")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq0nx"]
atlas = ExtResource("3_ufykn")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oovh"]
atlas = ExtResource("3_ufykn")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m46rv"]
atlas = ExtResource("3_ufykn")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmmnp"]
atlas = ExtResource("3_ufykn")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8x60"]
atlas = ExtResource("3_ufykn")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf87a"]
atlas = ExtResource("3_ufykn")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb6yt"]
atlas = ExtResource("3_ufykn")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_av1p8"]
atlas = ExtResource("3_ufykn")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_st1g1"]
atlas = ExtResource("3_ufykn")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvy4u"]
atlas = ExtResource("3_ufykn")
region = Rect2(880, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2wlo"]
atlas = ExtResource("3_ufykn")
region = Rect2(960, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq103"]
atlas = ExtResource("3_ufykn")
region = Rect2(1040, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5wbd"]
atlas = ExtResource("3_ufykn")
region = Rect2(1120, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7486l"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumnj"]
atlas = ExtResource("4_xshu0")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eex22"]
atlas = ExtResource("4_xshu0")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynu3j"]
atlas = ExtResource("4_xshu0")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3bwr"]
atlas = ExtResource("4_xshu0")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewskl"]
atlas = ExtResource("4_xshu0")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_by1bm"]
atlas = ExtResource("4_xshu0")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ua80"]
atlas = ExtResource("6_xshu0")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_768lt"]
atlas = ExtResource("6_xshu0")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2816u"]
atlas = ExtResource("6_xshu0")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlyux"]
atlas = ExtResource("6_xshu0")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51i2v"]
atlas = ExtResource("6_xshu0")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt07o"]
atlas = ExtResource("6_xshu0")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j474"]
atlas = ExtResource("6_xshu0")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uduk3"]
atlas = ExtResource("5_3ua80")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1qme"]
atlas = ExtResource("5_3ua80")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61kkc"]
atlas = ExtResource("5_3ua80")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5swr"]
atlas = ExtResource("5_3ua80")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ds6k"]
atlas = ExtResource("5_3ua80")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wfq5"]
atlas = ExtResource("5_3ua80")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdgfm"]
atlas = ExtResource("5_3ua80")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kad6k"]
atlas = ExtResource("5_3ua80")
region = Rect2(560, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2816u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18fl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pmuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qisqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2aqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwrmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n63ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdset")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4do7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd7ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boqqp")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_042yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaqq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3cwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s16me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scx5s")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvb25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21rlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq0nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oovh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m46rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmmnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8x60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf87a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb6yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av1p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st1g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvy4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2wlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq103")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5wbd")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7486l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eex22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynu3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3bwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewskl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by1bm")
}],
"loop": true,
"name": &"idle ",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ua80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_768lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2816u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlyux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51i2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt07o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j474")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ua80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_768lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2816u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlyux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51i2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt07o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j474")
}],
"loop": false,
"name": &"recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uduk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1qme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61kkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5swr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ds6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wfq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdgfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kad6k")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_3ua80"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttakDirection/AttackRange/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hlyux"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttakDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_51i2v"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttakDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lt07o"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttakDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0j474"]
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle "]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttakDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xshu0"]
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttakDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bmqk2"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4k43t"]
_data = {
&"RESET": SubResource("Animation_3ua80"),
&"attack": SubResource("Animation_hlyux"),
&"damage": SubResource("Animation_51i2v"),
&"death": SubResource("Animation_lt07o"),
&"idle ": SubResource("Animation_0j474"),
&"recover": SubResource("Animation_xshu0"),
&"run": SubResource("Animation_bmqk2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjuu0"]
size = Vector2(8.75, 9)

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_selrt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_768lt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
scale = Vector2(0.523437, 0.523437)
sprite_frames = SubResource("SpriteFrames_2816u")
animation = &"idle "
autoplay = "idle "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4k43t")
}
autoplay = "idle "

[node name="AttakDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttakDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttakDirection/AttackRange"]
position = Vector2(-15.625, 0)
shape = SubResource("RectangleShape2D_sjuu0")

[node name="DamageBox" parent="AttakDirection" instance=ExtResource("7_ufykn")]

[node name="HurtBox" parent="AttakDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 0

[node name="HitBox" parent="AttakDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttakDirection/DamageBox/HitBox" index="0"]
position = Vector2(-15, 1)

[node name="MobHealth" parent="." instance=ExtResource("9_3ua80")]
position = Vector2(0, -16)
scale = Vector2(0.12, 0.12)

[connection signal="body_entered" from="AttakDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttakDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="damage_received" from="MobHealth" to="." method="_on_mob_health_damage_received"]
[connection signal="no_health" from="MobHealth" to="." method="_on_mob_health_no_health"]

[editable path="AttakDirection/DamageBox"]
